<resources>
    <string name="app_name">AndroidQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect… Try again!</string>
    <string name="nextButton">Next</string>
    <string name="prevButton">Prev</string>
    <string name="next_description">Next Question</string>
    <string name="prev_description">Previous Question</string>
    <!-- Questions -->
    <string name="model">Model objects are used for data, they have nothing to do with UI</string>
    <string name="model_to_controller">Controller retrieves data requested by the Views</string>
    <string name="views">View objects are related to the UI layer</string>
    <string name="view_code">View objects are coded in HTML and jetpack compose</string>
    <string name="view_controller">View objects send signals to the model</string>
    <string name="controller_to_model">Controllers deal with data: retrieve, update, delete</string>
    <string name="controller_to_view">Controller updates views with changes from model layer</string>
    <string name="mvc_weakness">MVC architecture is good for both small and large projects</string>
    <string name="activity">An activity is responsible for managing user interaction with a screen</string>
    <string name="view_examples">ConstraintLayouts, Buttons and TextViews are Controller examples</string>
    <string name="nonexistent_state">Nonexistent activities are the "destroyed state," they cannot be interacted with and do not exist in memory</string>
    <string name="stopped_state">Stopped exists in memory and occurs when you close the app</string>
    <string name="paused_state">Paused state occurs when an activity is in memory and partially visible but not in foreground, like during multi-window mode</string>
    <string name="resumed_state">Only one activity can be in the resumed state at a time, it is in memory, visible and in the foreground</string>
    <string name="onCreate_invoke">We call onCreate to control app state</string>
    <!-- Answers -->
    <string name="model_ans">TRUE</string>
    <string name="model_to_controller_ans">TRUE</string>
    <string name="views_ans">TRUE</string>
    <string name="view_code_ans">FALSE</string>
    <string name="view_controller_ans">FALSE</string>
    <string name="controller_to_model_ans">TRUE</string>
    <string name="controller_to_view_ans">TRUE</string>
    <string name="mvc_weakness_ans">FALSE</string>
    <string name="activity_ans">TRUE</string>
    <string name="view_examples_ans">FALSE</string>
    <string name="nonexistent_state_ans">TRUE</string>
    <string name="stopped_state_ans">FALSE</string>
    <string name="paused_state_ans">TRUE</string>
    <string name="resumed_state_ans">TRUE</string>
    <string name="onCreate_invoke_ans">FALSE</string>
    <!-- Cheat Activity -->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong...</string>
</resources>