<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="24dp"
        tools:text="@string/model"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/buttons"
        android:textAllCaps="true"
        android:textSize="24sp"
        tools:text="@string/model_ans"
        android:visibility="invisible"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:backgroundTint="@color/buttons"
        android:textColor="@color/black"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:backgroundTint="@color/buttons"
            android:textColor="@color/black"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/falseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:backgroundTint="@color/buttons"
            android:textColor="@color/black"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/WTHeader"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/prev_description"/>

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/WTHeader"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/next_description"/>

    </LinearLayout>

</LinearLayout>